# SecTrans

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  sonar-project.properties
.github/workflows/: build.yml  generate-pdf.yml  release.yml  sonarqube.yml
doc/: specification.md
src/: Makefile
src/client/: Makefile  Message.h  SecTransClient.cpp  SecTransClient.h  client.c  client.cpp  client.h
src/include/: advanced_client.h  advanced_server.h  base64.h  bidirectionnal_client.h  bidirectionnal_server.h  rsa.h  secure_bi_client.h  secure_bi_server.h
src/lib/: client.c  server.c  ultimateClient.h  ultimateServer.h
src/server/: Makefile  SecTransServer.cpp  SecTransServer.h  server.c  server.cpp  server.h
test/lib/: advanced_client.c  advanced_server.c  bidirectionnal_client.c  bidirectionnal_server.c  rsa.c  secure_bi_client.c  secure_bi_server.c  simple_client.c  simple_server.c
